<resources>
    <string name="app_name">TaskGmailUiDesign</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="google">Google</string>
    <string name="sign_in">Sign In</string>
    <string name="use_your_google_account">Use your Google Account</string>
    <string name="email_or_phone">Email or phone</string>
    <string name="required">Required*</string>
    <string name="not_your_computer_use_guest_mode_to_sign_in_privately">Not your computer? Use Guest mode to sign in privately.</string>
    <string name="forgot_email">Forgot email?</string>
    <string name="learn_more">Learn more</string>
    <string name="create_account">Create account</string>
    <string name="welcome">Welcome</string>
    <string name="hasmikkhachatryan0113_gmail_com">hasmikkhachatryan0113@gmail.com</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="show_password">Show password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="next">Next</string>
    <string name="search_in_emails">Search in emails</string>
    <string name="primary">Primary</string>
    <string name="mail">Mail</string>
    <string name="camera">Camera</string>
    <string name="title">Title</string>
    <string name="description">description</string>
    <string name="social">Social</string>
    <string name="promotions">Promotions</string>
    <string name="all_labels">All labels</string>
    <string name="starred">Starred</string>
    <string name="snoozed">Snoozed</string>
    <string name="important">Important</string>
    <string name="sent">Sent</string>
    <string name="scheduled">Scheduled</string>
    <string name="outbox">Outbox</string>
    <string name="drafts">Drafts</string>
    <string name="all_mail">All mail</string>
    <string name="spam">Spam</string>
    <string name="bin">Bin</string>
    <string name="calendar">Calendar</string>
    <string name="contacts">Contacts</string>
    <string name="settings">Settings</string>
    <string name="help_and_feedback">Help and feedback</string>
    <string name="gmail">Gmail</string>
    <string name="create_a_google_account">Create a Google Account</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="firstname">FirstName</string>
    <string name="last_name_optional">Last name (optional)</string>
    <string name="enter_your_birthday_and_gender">Enter your birthday and gender</string>
    <string name="basic_information">Basic information</string>
    <string name="month_prompt">Month_Prompt</string>
    <string name="day_prompt">Day Prompt</string>
    <string name="year_prompt">Year Prompt</string>
    <string name="google_meet">Google Meet</string>
    <string name="compose">Compose</string>
    <string name="from_matghjkjlklkl_gamil_com">From \t matghjkjlklkl@gamil.com</string>
    <string name="to">To</string>
    <string name="subject">Subject</string>
    <string name="compose_email">Compose Email</string>
</resources>