<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.RegisterFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/space_20"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_end="@dimen/space_20" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/reg_title"
        style="@style/Login_style"
        android:layout_width="@dimen/space_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_40"
        android:text="@string/google"
        app:layout_constraintEnd_toStartOf="@+id/guidelineTwo"
        app:layout_constraintStart_toStartOf="@+id/guidelineOne"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/login_text"
        android:id="@+id/create_account"
        android:layout_width="@dimen/space_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_20"
        android:text="@string/create_a_google_account"
        app:layout_constraintEnd_toStartOf="@+id/guidelineTwo"
        app:layout_constraintStart_toStartOf="@+id/guidelineOne"
        app:layout_constraintTop_toBottomOf="@+id/reg_title" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/login_text_small"
        android:id="@+id/reg_text"
        android:layout_width="@dimen/space_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_10"
        android:text="@string/enter_your_name"
        app:layout_constraintEnd_toEndOf="@id/guidelineTwo"
        app:layout_constraintStart_toStartOf="@id/guidelineOne"
        app:layout_constraintTop_toBottomOf="@+id/create_account" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="@dimen/space_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_25"
        app:boxStrokeColor="@color/blue"
        app:hintTextColor="@color/edit_blue"
        app:layout_constraintEnd_toStartOf="@+id/guidelineTwo"
        app:layout_constraintStart_toStartOf="@+id/guidelineOne"
        app:layout_constraintTop_toBottomOf="@+id/reg_text">


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/firstname"
            android:inputType="text"
            android:lines="1"
            android:textColorHint="@color/blue" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_lastName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="@dimen/space_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_25"
        app:boxStrokeColor="@color/blue"
        app:hintTextColor="@color/edit_blue"
        app:layout_constraintEnd_toStartOf="@+id/guidelineTwo"
        app:layout_constraintStart_toStartOf="@+id/guidelineOne"
        app:layout_constraintTop_toBottomOf="@+id/input_name">


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/last_name_optional"
            android:inputType="text"
            android:lines="1"
            android:textColorHint="@color/blue" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/reg_next_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_90"
        android:background="@drawable/selector_hover_next_btn"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="@dimen/size_14"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/guidelineTwo"
        app:layout_constraintTop_toBottomOf="@+id/input_lastName" />
</androidx.constraintlayout.widget.ConstraintLayout>